<?xml version="1.0"?>

<package>
  <name>roomba_controller</name>
  <version>0.0.0</version>
  <description>The roomba_controller package</description>

  <maintainer email="GRoadPG@gmail.com">RyodoTanaka</maintainer>

  <license>BSD</license>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
